--- a/initial.ipynb
+++ b/initial.ipynb
@@ -17,7 +17,11 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.image import imread\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers"
    ]
   },
   {
