--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     "        layers.Dropout(0.3),\n",
     "\n",
     "        layers.Flatten(),\n",
-    "        layers.Dense(1)\n",
+    "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "\n",
     "    return model"
@@ -190,32 +190,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_11 (Conv2D)          (None, 64, 64, 64)        4864      \n",
+      " conv2d (Conv2D)             (None, 64, 64, 64)        4864      \n",
       "                                                                 \n",
-      " leaky_re_lu_11 (LeakyReLU)  (None, 64, 64, 64)        0         \n",
+      " leaky_re_lu_4 (LeakyReLU)   (None, 64, 64, 64)        0         \n",
       "                                                                 \n",
-      " dropout_11 (Dropout)        (None, 64, 64, 64)        0         \n",
+      " dropout (Dropout)           (None, 64, 64, 64)        0         \n",
       "                                                                 \n",
-      " conv2d_12 (Conv2D)          (None, 32, 32, 128)       204928    \n",
+      " conv2d_1 (Conv2D)           (None, 32, 32, 128)       204928    \n",
       "                                                                 \n",
-      " leaky_re_lu_12 (LeakyReLU)  (None, 32, 32, 128)       0         \n",
+      " leaky_re_lu_5 (LeakyReLU)   (None, 32, 32, 128)       0         \n",
       "                                                                 \n",
-      " dropout_12 (Dropout)        (None, 32, 32, 128)       0         \n",
+      " dropout_1 (Dropout)         (None, 32, 32, 128)       0         \n",
       "                                                                 \n",
-      " flatten_5 (Flatten)         (None, 131072)            0         \n",
+      " flatten (Flatten)           (None, 131072)            0         \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 131073    \n",
+      " dense_1 (Dense)             (None, 1)                 131073    \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 340,865\n",
@@ -228,6 +228,107 @@
    "source": [
     "discriminator = make_discriminator_model()\n",
     "discriminator.summary()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_generator_model():\n",
+    "    model = tf.keras.Sequential([\n",
+    "        layers.Dense(32*32*512, use_bias=False, input_shape=(100,)),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.LeakyReLU(),\n",
+    "\n",
+    "        layers.Reshape((32, 32, 512)),\n",
+    "        layers.Conv2DTranspose(256, (5, 5), strides=(1, 1), padding='same', use_bias=False),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.LeakyReLU(),\n",
+    "\n",
+    "        layers.Conv2DTranspose(128, (5, 5), strides=(2, 2), padding='same', use_bias=False),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.LeakyReLU(),\n",
+    "\n",
+    "        layers.Conv2DTranspose(64, (5, 5), strides=(2, 2), padding='same', use_bias=False),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.LeakyReLU(),\n",
+    "\n",
+    "        layers.Conv2DTranspose(3, (5, 5), strides=(1, 1), padding='same', use_bias=False, activation='tanh')\n",
+    "    ])\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 524288)            52428800  \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 524288)           2097152   \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " leaky_re_lu (LeakyReLU)     (None, 524288)            0         \n",
+      "                                                                 \n",
+      " reshape (Reshape)           (None, 32, 32, 512)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose (Conv2DTra  (None, 32, 32, 256)      3276800   \n",
+      " nspose)                                                         \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 32, 32, 256)      1024      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_1 (LeakyReLU)   (None, 32, 32, 256)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_1 (Conv2DT  (None, 64, 64, 128)      819200    \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 64, 64, 128)      512       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_2 (LeakyReLU)   (None, 64, 64, 128)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_2 (Conv2DT  (None, 128, 128, 64)     204800    \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 128, 128, 64)     256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_3 (LeakyReLU)   (None, 128, 128, 64)      0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_3 (Conv2DT  (None, 128, 128, 3)      4800      \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 58,833,344\n",
+      "Trainable params: 57,783,872\n",
+      "Non-trainable params: 1,049,472\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "generator = make_generator_model()\n",
+    "generator.summary()"
    ]
   }
  ],
