Added Loss Functions and Optimizers

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 10000\n",
+    "NOISE_DIM = 100"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## EDA (Exploratory Data Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "202599\n"
+      "Number of images: 202599\n"
      ]
     }
    ],
@@ -94,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_discriminator_model():\n",
     "    model = tf.keras.Sequential([\n",
-    "        layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same', input_shape=[128, 128, 3]),\n",
+    "        layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same', input_shape=(128, 128, 3,)),\n",
     "        layers.LeakyReLU(),\n",
     "        layers.Dropout(0.3),\n",
     "\n",
@@ -184,32 +202,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 64, 64, 64)        4864      \n",
+      " conv2d_6 (Conv2D)           (None, 64, 64, 64)        4864      \n",
       "                                                                 \n",
-      " leaky_re_lu (LeakyReLU)     (None, 64, 64, 64)        0         \n",
+      " leaky_re_lu_14 (LeakyReLU)  (None, 64, 64, 64)        0         \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 64, 64, 64)        0         \n",
+      " dropout_6 (Dropout)         (None, 64, 64, 64)        0         \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 32, 32, 128)       204928    \n",
+      " conv2d_7 (Conv2D)           (None, 32, 32, 128)       204928    \n",
       "                                                                 \n",
-      " leaky_re_lu_1 (LeakyReLU)   (None, 32, 32, 128)       0         \n",
+      " leaky_re_lu_15 (LeakyReLU)  (None, 32, 32, 128)       0         \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 32, 32, 128)       0         \n",
+      " dropout_7 (Dropout)         (None, 32, 32, 128)       0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 131072)            0         \n",
+      " flatten_3 (Flatten)         (None, 131072)            0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 1)                 131073    \n",
+      " dense_5 (Dense)             (None, 1)                 131073    \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 340,865\n",
@@ -234,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_generator_model():\n",
     "    model = tf.keras.Sequential([\n",
-    "        layers.Dense(32*32*512, use_bias=False, input_shape=(100,)),\n",
+    "        layers.Dense(32*32*512, use_bias=False, input_shape=(NOISE_DIM,)),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.LeakyReLU(),\n",
     "\n",
@@ -265,52 +283,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_1 (Dense)             (None, 524288)            52428800  \n",
+      " dense_6 (Dense)             (None, 524288)            52428800  \n",
       "                                                                 \n",
-      " batch_normalization (BatchN  (None, 524288)           2097152   \n",
-      " ormalization)                                                   \n",
-      "                                                                 \n",
-      " leaky_re_lu_2 (LeakyReLU)   (None, 524288)            0         \n",
-      "                                                                 \n",
-      " reshape (Reshape)           (None, 32, 32, 512)       0         \n",
-      "                                                                 \n",
-      " conv2d_transpose (Conv2DTra  (None, 32, 32, 256)      3276800   \n",
-      " nspose)                                                         \n",
-      "                                                                 \n",
-      " batch_normalization_1 (Batc  (None, 32, 32, 256)      1024      \n",
+      " batch_normalization_8 (Batc  (None, 524288)           2097152   \n",
       " hNormalization)                                                 \n",
       "                                                                 \n",
-      " leaky_re_lu_3 (LeakyReLU)   (None, 32, 32, 256)       0         \n",
+      " leaky_re_lu_16 (LeakyReLU)  (None, 524288)            0         \n",
       "                                                                 \n",
-      " conv2d_transpose_1 (Conv2DT  (None, 64, 64, 128)      819200    \n",
+      " reshape_2 (Reshape)         (None, 32, 32, 512)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_8 (Conv2DT  (None, 32, 32, 256)      3276800   \n",
       " ranspose)                                                       \n",
       "                                                                 \n",
-      " batch_normalization_2 (Batc  (None, 64, 64, 128)      512       \n",
+      " batch_normalization_9 (Batc  (None, 32, 32, 256)      1024      \n",
       " hNormalization)                                                 \n",
       "                                                                 \n",
-      " leaky_re_lu_4 (LeakyReLU)   (None, 64, 64, 128)       0         \n",
+      " leaky_re_lu_17 (LeakyReLU)  (None, 32, 32, 256)       0         \n",
       "                                                                 \n",
-      " conv2d_transpose_2 (Conv2DT  (None, 128, 128, 64)     204800    \n",
+      " conv2d_transpose_9 (Conv2DT  (None, 64, 64, 128)      819200    \n",
       " ranspose)                                                       \n",
       "                                                                 \n",
-      " batch_normalization_3 (Batc  (None, 128, 128, 64)     256       \n",
-      " hNormalization)                                                 \n",
+      " batch_normalization_10 (Bat  (None, 64, 64, 128)      512       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " leaky_re_lu_5 (LeakyReLU)   (None, 128, 128, 64)      0         \n",
+      " leaky_re_lu_18 (LeakyReLU)  (None, 64, 64, 128)       0         \n",
       "                                                                 \n",
-      " conv2d_transpose_3 (Conv2DT  (None, 128, 128, 3)      4800      \n",
-      " ranspose)                                                       \n",
+      " conv2d_transpose_10 (Conv2D  (None, 128, 128, 64)     204800    \n",
+      " Transpose)                                                      \n",
+      "                                                                 \n",
+      " batch_normalization_11 (Bat  (None, 128, 128, 64)     256       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " leaky_re_lu_19 (LeakyReLU)  (None, 128, 128, 64)      0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_11 (Conv2D  (None, 128, 128, 3)      4800      \n",
+      " Transpose)                                                      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 58,833,344\n",
@@ -324,6 +342,82 @@
     "generator = make_generator_model()\n",
     "generator.summary()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loss Functions and Optimizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.Adam(1e-4)\n",
+    "loss_object = tf.keras.losses.BinaryCrossentropy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Discriminator setup\n",
+    "discriminator.compile(optimizer=optimizer, loss=loss_object, metrics=['accuracy'])\n",
+    "discriminator.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Generator setup\n",
+    "noise = layers.Input(shape=(NOISE_DIM,))\n",
+    "label = layers.Input(shape=(1,), dtype='int32')\n",
+    "image = generator([noise, label])\n",
+    "\n",
+    "## Combined model\n",
+    "validity = discriminator([image, label])\n",
+    "combined = tf.keras.Model([noise, label], validity)\n",
+    "combined.compile(optimizer=optimizer, loss=loss_object)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
