Update loss arrays

--- a/main.ipynb
+++ b/main.ipynb
@@ -518,8 +518,12 @@
     "    print(f\"----------- Epoch {epoch+1} -----------\")\n",
     "\n",
     "    imgGenerator = create_batches(BATCH_SIZE)\n",
+    "    discriminator_batch_loss = []\n",
+    "    discriminator_batch_acc = []\n",
+    "    generator_batch_loss = []\n",
     "\n",
     "    for i in range (MAX_SIZE//BATCH_SIZE):\n",
+    "\n",
     "        imgs = next(imgGenerator)\n",
     "        imgs = reshapeModel(imgs)\n",
     "\n",
@@ -533,14 +537,16 @@
     "        d_loss_fake = discriminator.train_on_batch(gen_imgs, fake)\n",
     "        d_loss = 0.5 * np.add(d_loss_real, d_loss_fake)\n",
     "\n",
-    "        discriminator_loss.append(d_loss[0])\n",
-    "\n",
     "        discriminator.trainable = False\n",
     "\n",
     "        g_loss = combined.train_on_batch(noise, real)\n",
     "\n",
-    "        generator_loss.append(g_loss)\n",
-    "        #print(\"Entered\")\n",
+    "        discriminator_batch_loss.append(d_loss[0])\n",
+    "        generator_batch_loss.append(g_loss)\n",
+    "        discriminator_batch_acc.append(d_loss[1])\n",
+    "\n",
+    "    discriminator_loss.append(np.mean(discriminator_batch_loss))\n",
+    "    generator_loss.append(np.mean(generator_batch_loss))\n",
     "\n",
     "\n",
     "    print(f\"Discriminator loss: {d_loss[0]}   Accuracy: {d_loss[1]}\")\n",
