Flask Update with CSS and HTTPS

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 1500\n",
+    "EPOCHS = 1000\n",
     "NOISE_DIM = 250\n",
     "BATCH_SIZE = 64\n",
     "\n",
@@ -307,7 +307,7 @@
    "outputs": [],
    "source": [
     "def discriminator_train(current_accuracy):\n",
-    "    return current_accuracy < 0.8    "
+    "    return current_accuracy < 0.8"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(1115, EPOCHS):\n",
+    "for epoch in range(EPOCHS):\n",
     "\n",
     "    print(f\"----------- Epoch {epoch+1} -----------\")\n",
     "\n",
