--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -117,12 +117,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 1000\n",
+    "EPOCHS = 100\n",
     "NOISE_DIM = 250\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "MAX_SIZE = len(image_files)\n",
-    "RANDOM_SELECT = 0.1\n",
+    "\n",
+    "# Select percentage of data to use in each epoch\n",
+    "RANDOM_SELECT = 1\n",
+    "\n",
+    "DISCRIMINATOR_ACCURACY_THRESHOLD = 0.7\n",
     "\n",
     "INTERVAL = 5"
    ]
@@ -307,7 +311,7 @@
    "outputs": [],
    "source": [
     "def discriminator_train(current_accuracy):\n",
-    "    return current_accuracy < 0.8"
+    "    return current_accuracy < DISCRIMINATOR_ACCURACY_THRESHOLD"
    ]
   },
   {
@@ -417,7 +421,7 @@
     "\n",
     "        noise = np.random.normal(0, 1, (BATCH_SIZE, NOISE_DIM))\n",
     "\n",
-    "        discriminator.trainable = discriminator_train(discriminator_loss[-1])\n",
+    "        discriminator.trainable = True if (len(discriminator_loss) == 0) else discriminator_train(discriminator_loss[-1])\n",
     "\n",
     "        gen_imgs = generator.predict(noise, verbose=0)\n",
     "\n",
@@ -495,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
