Discriminator Training Test

--- a/notebooks/discriminator_training/accuracy_based.ipynb
+++ b/notebooks/discriminator_training/accuracy_based.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +43,18 @@
     "image_files = [os.path.join(directory_path, f) for f in os.listdir(directory_path) if f.endswith('.jpg')]\n",
     "\n",
     "\n",
-    "EPOCHS = 100\n",
+    "EPOCHS = 2000\n",
     "NOISE_DIM = 100\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "MAX_SIZE = 10000\n",
     "\n",
     "# Select percentage of data to use in each epoch\n",
-    "RANDOM_SELECT = 1\n",
+    "RANDOM_SELECT = 0.5\n",
     "\n",
     "DISCRIMINATOR_ACCURACY_THRESHOLD = 0.6\n",
     "\n",
-    "INTERVAL = 5"
+    "INTERVAL = 50"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +98,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 64, 64, 64)        4864      \n",
+      "                                                                 \n",
+      " leaky_re_lu (LeakyReLU)     (None, 64, 64, 64)        0         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 64, 64, 64)        0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 32, 32, 128)       204928    \n",
+      "                                                                 \n",
+      " leaky_re_lu_1 (LeakyReLU)   (None, 32, 32, 128)       0         \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 32, 32, 128)       0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 131072)            0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 131073    \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 340,865\n",
+      "Trainable params: 340,865\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "discriminator = make_discriminator_model()\n",
     "discriminator.summary()"
@@ -116,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +179,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_1 (Dense)             (None, 524288)            52428800  \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 524288)           2097152   \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " leaky_re_lu_2 (LeakyReLU)   (None, 524288)            0         \n",
+      "                                                                 \n",
+      " reshape (Reshape)           (None, 32, 32, 512)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose (Conv2DTra  (None, 32, 32, 256)      3276800   \n",
+      " nspose)                                                         \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 32, 32, 256)      1024      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_3 (LeakyReLU)   (None, 32, 32, 256)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_1 (Conv2DT  (None, 64, 64, 128)      819200    \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 64, 64, 128)      512       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_4 (LeakyReLU)   (None, 64, 64, 128)       0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_2 (Conv2DT  (None, 128, 128, 64)     204800    \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 128, 128, 64)     256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " leaky_re_lu_5 (LeakyReLU)   (None, 128, 128, 64)      0         \n",
+      "                                                                 \n",
+      " conv2d_transpose_3 (Conv2DT  (None, 128, 128, 3)      4800      \n",
+      " ranspose)                                                       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 58,833,344\n",
+      "Trainable params: 57,783,872\n",
+      "Non-trainable params: 1,049,472\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "generator = make_generator_model()\n",
     "generator.summary()"
@@ -165,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,6 +392,7 @@
     "fake = np.zeros((BATCH_SIZE, 1))\n",
     "\n",
     "discriminator_loss = []\n",
+    "discriminator_accuracy = []\n",
     "generator_loss = []\n",
     "\n",
     "image_files = np.array(image_files)"
@@ -315,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,15 +450,102 @@
     "\n",
     "    discriminator_loss.append(np.mean(discriminator_batch_loss))\n",
     "    generator_loss.append(np.mean(generator_batch_loss))\n",
+    "    discriminator_accuracy.append(np.mean(discriminator_batch_acc))\n",
     "\n",
     "\n",
-    "    print(f\"Discriminator loss: {d_loss[0]}   Accuracy: {d_loss[1]}\")\n",
-    "    print(f\"Generator loss: {g_loss}\")\n",
+    "    print(f\"Discriminator loss: {discriminator_loss[epoch]}   Accuracy: {discriminator_accuracy[epoch]}\")\n",
+    "    print(f\"Generator loss: {generator_loss[epoch]}\")\n",
     "    print('---------------------------------------')\n",
     "\n",
     "    if((epoch+1) % INTERVAL==0):\n",
     "        sample_image(epoch+1)\n",
     "        create_checkpoint(generator, discriminator, epoch+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../logs/accuracy_version.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 12\u001b[0m\n\u001b[0;32m      7\u001b[0m filename \u001b[39m=\u001b[39m \u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../logs/accuracy_version.txt\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[39m# list all text files in the current directory\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \n\u001b[0;32m     11\u001b[0m     \u001b[39m# open the text file\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m     13\u001b[0m     \u001b[39m# read in the entire file as a string\u001b[39;00m\n\u001b[0;32m     14\u001b[0m     contents \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\n\u001b[0;32m     16\u001b[0m     \u001b[39m# split the string into lines\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../logs/accuracy_version.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize lists to store the extracted information\n",
+    "epochs = []\n",
+    "discriminator_losses = []\n",
+    "discriminator_accuracies = []\n",
+    "generator_losses = []\n",
+    "\n",
+    "filename = r'../../logs/accuracy_version.txt'\n",
+    "\n",
+    "# list all text files in the current directory\n",
+    "\n",
+    "    # open the text file\n",
+    "with open(filename, \"r\") as f:\n",
+    "    # read in the entire file as a string\n",
+    "    contents = f.read()\n",
+    "    \n",
+    "    # split the string into lines\n",
+    "    lines = contents.split(\"\\n\")\n",
+    "    \n",
+    "    # loop through the lines and extract the relevant information\n",
+    "    for line in lines:\n",
+    "        if line.startswith(\"----------- Epoch\"):\n",
+    "            epoch = int(line.split()[-2])\n",
+    "            epochs.append(epoch)\n",
+    "\n",
+    "        elif line.startswith(\"Discriminator loss\"):\n",
+    "            discriminator_accuracy = float(line.split(\":\")[-1].strip())\n",
+    "            discriminator_loss= float(line.split(\":\")[-2].split()[-2])\n",
+    "\n",
+    "            discriminator_losses.append(discriminator_loss)\n",
+    "            discriminator_accuracies.append(discriminator_accuracy)\n",
+    "\n",
+    "        elif line.startswith(\"Generator loss\"):\n",
+    "            generator_loss = float(line.split(\":\")[-1].strip())\n",
+    "            generator_losses.append(generator_loss)\n",
+    "\n",
+    "        elif line.startswith(\"Step \"):\n",
+    "            pass  # ignore step information\n",
+    "\n",
+    "        elif line.strip() == \"\":  # ignore blank lines\n",
+    "            pass\n",
+    "        \n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "\n",
+    "# print out the extracted information\n",
+    "print(\"Epochs:\", epochs)\n",
+    "print(\"Discriminator Losses:\", discriminator_losses)\n",
+    "print(\"Discriminator Accuracies:\", discriminator_accuracies)\n",
+    "print(\"Generator Losses:\", generator_losses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Plot loss and accuracy\n",
+    "\n",
+    "plt.plot(discriminator_loss, label='Discriminator loss')\n",
+    "plt.plot(discriminator_accuracy, label='Discriminator accuracy')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
@@ -393,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4,
   "vscode": {
