--- a/notebooks/model_testing.ipynb
+++ b/notebooks/model_testing.ipynb
@@ -89,8 +89,8 @@
     }
    ],
    "source": [
-    "for i in [65, 75]:\n",
-    "  generator = tf.keras.models.load_model(f'../checkpoints/generator_epoch_{(i)}.h5')\n",
+    "for i in range(20):\n",
+    "  generator = tf.keras.models.load_model(f'../checkpoints/generator_epoch_{(i+1)*5}.h5')\n",
     "\n",
     "  ##Generate 10 images and plot with no axes\n",
     "  noise = np.random.normal(0, 1, (10, 250))\n",
